--- a/roles/ganglia/meta/main.yml
+++ b/roles/ganglia/meta/main.yml
@@ -1,6 +1,4 @@
----
-dependencies:
-  - { role: ganglia/gmetad }
-  - { role: ganglia/gmond }
-#  - { role: nginx }
-#  - { role: xbuild-php/php-fpm }
+#---
+#dependencies:
+#  - { role: ganglia/gmetad }
+#  - { role: ganglia/gmond }
