graphiteインストール centos6

--- a/roles/graphite/tasks/elasticsearch.yml
+++ b/roles/graphite/tasks/elasticsearch.yml
@@ -14,5 +14,6 @@
 - name: Install elasticsearch
   yum: name={{item}} state=installed
   with_items:
+    - java
     - elasticsearch
   tags: elasticsearch
